--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
   
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
-  - {title: Mail, icon: envelope, url: "mailto:yonwang@coh.org"}
+  - {title: Mail, icon: envelope, url: "mailto:wingzhewang@gmail.com"}
   - {title: Github, icon: github, url: "https://github.com/YzwIsALaity"}
 
 comments:
